gcc/testsuite/gdc.test/fail_compilation/fail101.d
/*
TEST_OUTPUT:
---
fail_compilation/fail101.d(8): Error: cannot implicitly convert expression `1` of type `int` to `creal`
---
*/

creal c = 1;
